# yolov8cpp

./: CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt
include/inference/: CMakeLists.txt  inference.h
